; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/serqt_usb2/extr_serqt_usb2.c_qt_open_channel.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/serqt_usb2/extr_serqt_usb2.c_qt_open_channel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_serial = type { i32 }
%struct.qt_open_channel_data = type { i32 }

@QT_OPEN_CLOSE_CHANNEL = common dso_local global i32 0, align 4
@USBD_TRANSFER_DIRECTION_IN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.usb_serial*, i32, %struct.qt_open_channel_data*)* @qt_open_channel to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @qt_open_channel(%struct.usb_serial* %0, i32 %1, %struct.qt_open_channel_data* %2) #0 {
  %4 = alloca %struct.usb_serial*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.qt_open_channel_data*, align 8
  %7 = alloca i32, align 4
  store %struct.usb_serial* %0, %struct.usb_serial** %4, align 8
  store i32 %1, i32* %5, align 4
  store %struct.qt_open_channel_data* %2, %struct.qt_open_channel_data** %6, align 8
  %8 = load %struct.usb_serial*, %struct.usb_serial** %4, align 8
  %9 = getelementptr inbounds %struct.usb_serial, %struct.usb_serial* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.usb_serial*, %struct.usb_serial** %4, align 8
  %12 = getelementptr inbounds %struct.usb_serial, %struct.usb_serial* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @usb_rcvctrlpipe(i32 %13, i32 0)
  %15 = load i32, i32* @QT_OPEN_CLOSE_CHANNEL, align 4
  %16 = load i32, i32* @USBD_TRANSFER_DIRECTION_IN, align 4
  %17 = load i32, i32* %5, align 4
  %18 = load %struct.qt_open_channel_data*, %struct.qt_open_channel_data** %6, align 8
  %19 = call i32 @usb_control_msg(i32 %10, i32 %14, i32 %15, i32 %16, i32 1, i32 %17, %struct.qt_open_channel_data* %18, i32 4, i32 300)
  store i32 %19, i32* %7, align 4
  %20 = load i32, i32* %7, align 4
  ret i32 %20
}

declare dso_local i32 @usb_control_msg(i32, i32, i32, i32, i32, i32, %struct.qt_open_channel_data*, i32, i32) #1

declare dso_local i32 @usb_rcvctrlpipe(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
